Fixed some code style to please Sonar